--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run",
+    "e2e": "start-server-and-test start http://localhost:3000 cypress",
+    "e2e:headless": "start-server-and-test start http://localhost:3000 cypress:headless"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.7.2",
@@ -13,14 +17,19 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/montserrat": "^4.5.1",
     "@fontsource/poppins": "^4.5.0",
+    "axios": "^0.24.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.21.2",
+    "react-icons": "^4.3.1",
+    "start-server-and-test": "^1.14.0"
   },
   "devDependencies": {
     "@types/node": "16.11.10",
     "@types/react": "17.0.37",
+    "cypress": "^9.1.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
