--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,19 @@
 version: 2.1
-jobs:
+orbs:
+  cypress: cypress-io/cypress@1.29.0
+workflows:
   build:
-    working_directory: ~/repo
-    docker:
-      - image: circleci/node:10.16.3
-    steps:
-      - checkout
-      - run:
-          name: Update NPM
-          command: "sudo npm install -g npm@5"
-      - restore_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-      - run:
-          name: Install Dependencies
-          command: npm install
-      - save_cache:
-          key: dependency-cache-{{ checksum "package-lock.json" }}
-          paths:
-            - ./node_modules
-      - run:
-          name: Run tests
-          command: npm run e2e:headless
+    jobs:
+      - cypress/run:
+          start: npm run dev
+          wait-on: 'http://localhost:3000'
+          # there are no jobs to follow this one
+          # so no need to save the workspace files (saves time)
+          no-workspace: true
+          post-steps:
+            # store the created coverage report folder
+            # you can click on it in the CircleCI UI
+            # to see live static HTML site
+            - store_artifacts:
+                path: coverage
+            - run: npm run check-coverage-limits
